
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#7102] Improve memory_limit checks to properly check for values that are not formatted to PHP standards
- [#7191] Fix invalid api doc link in link_tag_scheme description
- [#7194] Fix issue where save button did not enable when reordering groups on user edit screen
- [#3818] Change modWebLink default responseCode to 301
- [#6611] Fix issue where MODx.Browser did not sort files by name by default
- [#7070] Do not overwrite user changes in default media sources during upgrade process
- [#7066] Allow search locally in Package Management if cURL is not installed
- [#7063] Fix issue with retreiving Element Media Source cache data
- [#7036] Fix issue with multiple grid store loading when searching
- Allow for non-PHP Dashboard File Widgets that are just HTML files
- [#6711] Fix issue with using MODx.Browser with file nodes and clicking loading edit page
- [#6936] Add sanity check for database tables getlist processor if user did not grant SHOW TABLES permissions for sql
- [#6942] Add missing resource duplicate ACL permission description lexicon string
- [#6970] Reload error log page after clearing too large error log file
- [#6956] Fix wrong groupname for OnMediaSourceDuplicate plugin event
- [#7013] Fix issue where modUser->getUserGroupNames was buggy with non-self users
- [#6960] Fix rendering issue when tree_root_id is set
- [#7031] Ensure setting from addr in modMail sets return-path as well
- [#7010] Add in rootId config option for MODx.Browser mgr widget
- [#6874] Fix issue where duplicating a TV did not copy Media Source relationships correctly
- [#6582] Fix clear cache checkbox persistence in Resource page when reloading via Template change
- Add modX::getInstance() factory method
- Allow for MODX tags within Media Source properties