@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#7088] Tweak column widths for settings grids
 - [#7102] Improve memory_limit checks to properly check for values that are not formatted to PHP standards
 - [#7191] Fix invalid api doc link in link_tag_scheme description
 - [#7194] Fix issue where save button did not enable when reordering groups on user edit screen
